# Nest-Typeorm-Boilerplate

./: .env.example  .eslintignore  .gitignore  .prettierignore  README.md  docker-compose.yml  dockerfile  package.json  pnpm-lock.yaml  pod.yaml  tsconfig.json
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scope-detection/: .gitignore  main.py  pyproject.toml
scope-detection/module/: hardscope.py  killcam.py
scope-detection/utils/: encoder.py  image_function.py  image_process.py
src/: app.module.ts  env.ts  main.ts
src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
src/chat/: chat.gateway.ts
src/db/: config.ts  custom.base.entity.ts
src/files/: files.controller.ts  files.module.ts  files.service.ts
src/health/: health.controller.ts  health.module.ts
src/jobs/: jobs.module.ts  match.job.ts
src/lobbies/: lobbies.controller.ts  lobbies.module.ts  lobbies.service.ts
src/notification/: notification.gateway.ts
src/players/: players.controller.ts  players.module.ts  players.service.ts
src/roles/: roles.controller.spec.ts  roles.controller.ts  roles.service.spec.ts  roles.service.ts
src/scope-detection/: scope-detection.controller.spec.ts  scope-detection.controller.ts  scope-detection.module.ts  scope-detection.service.spec.ts  scope-detection.service.ts
src/teams/: teams.controller.ts  teams.module.ts  (+1 more)
test/: jest-e2e.json  setup.ts  teardown.ts  test.container.ts  users.e2e-spec.ts
(+48 files in other folders)
