[tool.poetry]
name = "scope-detection"
version = "1.0.0"
description = "An app to find duration of scope in a video"
authors = ["Fasih Hussain <fasihhussain00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
moviepy = "^1.0.3"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
